Close second audit control gaps
